[package]
name = "vhci_driver"
license = "MIT"
description = "Rust Library to interface with the Linux Virtual Host Controller Interface (VHCI) Kernel Module"
categories = ["Operating systems::Linux APIs"]
repository = "https://github.com/rehar/vhci-driver.git"
author = "Rene Harder"
version = "0.1.1"
edition = "2021"

[dependencies]
udev = "0.8.0"